fix: wrap print.globals in if statement instead of the import

--- a/src/_styles.scss
+++ b/src/_styles.scss
@@ -21,9 +21,7 @@
 
 // BASE STYLES
 @import "globals/base.globals";
-@if $globals--print-reset {
-  @import "globals/print.globals";
-}
+@import "globals/print.globals";
 /* purgecss end ignore */
 
 // OBJECTS
